--- a/cover.css
+++ b/cover.css
@@ -3,21 +3,10 @@
  */
 
 /* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
+
 
 /* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
+
 
 
 /*
@@ -36,27 +25,7 @@ body {
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
-}
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
-}
 
 
 /*
@@ -169,4 +138,33 @@ body {
 .show{
 display: block;
 
+}
+.card{
+
+  border: 3px solid #fff;
+}
+
+
+.face{
+
+  background-color: rgba(10,10,150,0.4);
+   border-radius:15px;
+   margin: 15px;
+
+   }
+.tweet{
+background-color: rgba(10,100,100,0.4);
+ border-radius: 15px;
+ margin: 15px;
+
+}
+.width{
+  display: inline;
+  width: auto;
+  height: auto;
+  margin: 50px;
+
+}
+.row{
+      padding-top: 100px;
 }
