--- a/css/custom.css
+++ b/css/custom.css
@@ -25,12 +25,12 @@ body ,p, h1,h3{
     color: #FFF;
     background-color: #0288D1;
 }
-.btn-fb:hover,
-.btn-fb:focus {
+.btn-ln:hover,
+.btn-ln:focus {
     border: 1px solid #727272;
     outline: 0;
     color: #FFF;
-    background-color: #303F9F;
+    background-color: rgb(40, 123, 188);
 }
 .btn-git:hover,
 .btn-git:focus {
