fb for linkedin

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@ body ,p, h1,h3{
     padding-top: 10px;
     }
 
-.btn-default , .btn-git ,.btn-fb {
+.btn-default , .btn-git ,.btn-ln {
     border: 1px solid white;
     color: white;
     background-color: transparent;
