--- a/test_yoga/css/general.css
+++ b/test_yoga/css/general.css
@@ -20,7 +20,10 @@ body, html {
 
 .abcen{position: absolute;bottom: 8%;}
 
-.abcen1{position: absolute;top: 20%;}
+.abcen1{
+	position: absolute;
+	top: 0%; /*20*/
+}
 
 .content-section-c {
 	border-top: 1px solid #32465A;
@@ -1061,7 +1064,7 @@ color: #ECEBEB;
 /* All Mobile Sizes (devices and browser) */
 	@media only screen and (max-width: 767px) {
 		.intro-header {
-			height: 100%;
+			height: 120%;
 			padding-top: 50px;
 			padding-bottom: 50px;
 			color: #f8f8f8;
@@ -1071,7 +1074,7 @@ color: #ECEBEB;
 			background-color: #34495e;
 		}
 		
-		h1, .h1 {
+		h1, .h1 , .h1_home{
 			font-size: 50px;
 		}
 		
