--- a/test_yoga/css/general.css
+++ b/test_yoga/css/general.css
@@ -317,7 +317,7 @@ color: #ECEBEB;
 .banner {
 	padding: 100px 0;
 	color: #f8f8f8;
-	background: url(../img/intro/banner-bg.jpg) no-repeat center center;
+	background: url(https://snap-photos.s3.amazonaws.com/img-thumbs/960w/RKS9M8PY0X.jpg) no-repeat center center;
 	background-size: cover;
 }
 
